--- a/tests/browser.html
+++ b/tests/browser.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8"> 
         <title>Tests</title>
         <link rel="stylesheet" href="../node_modules/mocha/mocha.css">
     </head>
