--- a/tests/browser.html
+++ b/tests/browser.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8"> 
+        <meta charset="UTF-8">
         <title>Tests</title>
         <link rel="stylesheet" href="../node_modules/mocha/mocha.css">
     </head>
@@ -14,7 +14,7 @@
         <script>
             mocha.setup('bdd');
         </script>
-        <script src="foo.js"></script>
+        <script src="mutexTest.js"></script>
         <script>
             mocha.run();
         </script>
