--- a/tests/browser.html
+++ b/tests/browser.html
@@ -15,6 +15,7 @@
             mocha.setup('bdd');
         </script>
         <script src="mutexTest.js"></script>
+        <script src="semaphoreTest.js"></script>
         <script>
             mocha.run();
         </script>
