--- a/tests/browser.html
+++ b/tests/browser.html
@@ -13,6 +13,8 @@
    <script src="../node_modules/chai/chai.js"></script>
    <!-- the library -->
    <script src="../dist/lib.js"></script>
+   <!-- test util -->
+   <script src="./setup.js"></script>
    <script>
       mocha.setup('bdd');
    </script>
